# gm

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yml
src/: command.rs  db.rs  gcloud.rs  main.rs  mysql.rs
src/command/: completion.rs  db_config.rs  endpoint_template.yml  generate_zsh_completion.rs  sync_db.rs
src/config/: db_config.rs
src/db/: mysql.rs  postgresql.rs
src/gcloud/: client.rs  secret_manager.rs  sql_admin.rs
src/kube/: endpoint.rs
src/util/: exception.rs  http_client.rs  json.rs
