[package]
name = "gm"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
base64 = { version = "0.22.0" }
uuid = { version = "1.8.0", features = ["v4"] }
mysql = "24.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
