[package]
name = "gm"
version = "0.5.1"
edition = "2021"

[dependencies]
log = "0"
env_logger = "0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json", "rustls-tls"], default-features = false }
base64 = "0"
uuid = { version = "1", features = ["v4"] }
mysql = { version = "*", features = ["default-rustls"], default-features = false }

[profile.release]
strip = true
lto = true
